# trm_vs_mdlm

./: .gitignore  config.yaml  eval.py  pyproject.toml  run_pretain.sh  test_inference.ipynb  train.py
.claude/: settings.local.json
src/: data.py  mdlm.py  model.py  trm.py
